kubernetes/kubernetes-tackle-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tackle
  labels:
    app.kubernetes.io/name: tackle
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: tackle
    app.kubernetes.io/part-of: tackle
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tackle-ui
                port:
                  number: 8080
